k8s/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ws-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: hello-ws
  template:
    metadata:
      labels:
        component: hello-ws
    spec:
      containers:
        - name: hello-ws
          image: alessiofiore/spring-k8s-hello-service:1.0.0
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
