k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-person-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql-person
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: mysql-person
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim-person
      containers:
        - name: mysql
          image: mysql:5.6
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
