k8s/person-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-ws-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: person-ws
  template:
    metadata:
      labels:
        component: person-ws
    spec:
      containers:
        - name: person-ws
          image: alessiofiore/spring-k8s-person-service:1.0.0
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
