k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: hello-ws
  ports:
    - port: 8080
      targetPort: 8080
