k8s/person-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: person-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: person-ws
  ports:
    - port: 8080
      targetPort: 8080
