k8s/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: service1-ws
  ports:
    - port: 8080
      targetPort: 8080
