k8s/service2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: service2-ws
  ports:
    - port: 8080
      targetPort: 8080
